# MemeDrawer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
memedrawer/: __init__.py  classifier.py  cli.py  config.py  maid_art.py  sorter.py
test_memes/: .memedrawer_cache.json
tests/: test_memedrawer.py
