[project]
name = "memedrawer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.10.0",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
memedrawer = "memedrawer.cli:main"
