[project]
name = "memedrawer"
version = "0.1.0"
description = "Sort and rename messy meme folders with a local multimodal LLM and Mimi the maid"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
memedrawer = "memedrawer.cli:main"
